[gd_scene load_steps=2 format=3 uid="uid://bmwwqlq8iqcfo"]

[ext_resource type="Script" path="res://menu.gd" id="1_e51pg"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_e51pg")

[node name="btnStartServer" type="Button" parent="."]
offset_left = 479.0
offset_top = 179.0
offset_right = 645.0
offset_bottom = 229.0
text = "Start server"

[node name="btnStartClient" type="Button" parent="."]
offset_left = 478.0
offset_top = 242.0
offset_right = 644.0
offset_bottom = 292.0
text = "Start client"

[node name="btnStartSingleplayer" type="Button" parent="."]
offset_left = 476.0
offset_top = 305.0
offset_right = 642.0
offset_bottom = 355.0
text = "Start singleplayer"

[connection signal="pressed" from="btnStartServer" to="." method="_on_btn_start_server_pressed"]
[connection signal="pressed" from="btnStartClient" to="." method="_on_btn_start_client_pressed"]
[connection signal="pressed" from="btnStartSingleplayer" to="." method="_on_btn_start_singleplayer_pressed"]
